# DTOKS

./: .gitignore  Breakup.cpp  Breakup.h  CMakeLists.txt  Constants.h  DTOKSU.cpp  DTOKSU.h  DTOKSU_Config.cfg  Functions.cpp  Functions.h  GNUmakefile  GrainStructs.h  MathHeader.cpp  PlasmaData.h  README  build.sh  dtoks.conf  install.sh  install_netcdf4.sh  main.cpp  plasmagrid.cpp  plasmagrid.h  setup.sh  threevector.cpp  threevector.h
ChargingEquation/: ChargingModel.cpp  ChargingModel.h
Config_Files/: DTOKSU_Config.cfg  DTOKSU_Config_ITER.cfg  DTOKSU_Config_JET.cfg  DTOKSU_Config_MAST.cfg  DTOKSU_Config_Magnum-PSI.cfg
Dependencies/: install_netcdf4.sh
Elements/: Beryllium.cpp  Beryllium.h  GrainStructs.h  Graphite.cpp  Graphite.h  Iron.cpp  Iron.h  Matter.cpp  Matter.h  Tungsten.cpp  Tungsten.h
ForceEquation/: ForceModel.cpp  ForceModel.h
HeatingEquation/: Checks.h  HeatingModel.cpp  HeatingModel.h
Models/: ChargingModel.cpp  ChargingModel.h  ChargingModel_temp.cpp  ForceModel.cpp  ForceModel.h  HeatingModel.cpp  HeatingModel.h  Model.cpp  Model.h  PlasmaGrid.cpp  PlasmaGrid.h
Models/PlasmaData/: PlasmaGenerator.cpp  build.sh
PlasmaData/: vtkgrid_ITER.vtk  vtkgrid_MAST_MkI.vtk
PlasmaData/PlasmaGenerator/: PlasmaGenerator.cpp  build.sh
Plotting/: plt.ColourMap  plt.all  plt.breakup  plt.breakup_heat  plt.breakup_pos  plt.breakup_vel  plt.forces  plt.pos  plt.vel  savepng
Plotting/Matlab/: BreakupPlot.m  Histograms.m  MPSI_PostProcessing.m  PlotColorWeightedLine.m  SOLPSInterpolation.m  VelocityForcePlot.m
Tests/: CMakeLists.txt  README_TESTING
Tests/ErrorEstimate/: NonConstHeatCapacity.h  TemperatureEvolutionEquation.h  build.sh  main.cpp
Tests/IntegrationTests/: CMakeLists.txt  CompareConstEmissivTest.h  ConstantElectronPlasmaHeatingTest.h  ConstantHeatEmissivTest.h  ConstantHeatingTest.h  ConstantPlasmaHeatingNeutralRecombTest.h  ConstantPlasmaHeatingTest.h  build.sh  integration_test.cpp  main.cpp
Tests/IntegrationTests/Charging/: ChargeTest.h  Run.sh  build.sh  main.cpp
Tests/IntegrationTests/Forcing/: ConstantForceTest.h  ConstantLorentzForceTest.h  ConstantLorentzGravityForceTest.h  ConstantMagneticForceTest.h  GravityTest.h  IonAndNeutralDragTest.h  NeutralDragTest.h  Run.sh  build.sh  main.cpp
Tests/IntegrationTests/Heating/: CompareConstEmissivTest.h  ConstantElectronPlasmaHeatingTest.h  ConstantHeatEmissivTest.h  ConstantHeatingTest.h  ConstantPlasmaHeatingNeutralRecombTest.h  ConstantPlasmaHeatingTest.h  Run.sh  build.sh  main.cpp
Tests/IntegrationTests/include/: ChargeTest.h  CompareConstEmissivTest.h  ConstantEFieldGravityTest.h  ConstantElectronPlasmaHeatingTest.h  ConstantGravityTest.h  ConstantHeatEmissivTest.h  ConstantHeatingTest.h  ConstantLorentzForceTest.h  ConstantPlasmaHeatingNeutralRecombTest.h  ConstantPlasmaHeatingTest.h  ForceTest.h  HeatTest.h
Tests/ModelTesting/: BeforeAfterHeatingTest.h  EvaporativeCoolingTest.h  NeutralDragTest.h  NeutralHeatingTest.h  VariableEmissivityTest.h  VariableHeatCapacityTest.h  build.sh  main.cpp
Tests/ModelTests/: CMakeLists.txt  model_test.cpp
Tests/ModelTests/include/: BeforeAfterHeatingTest.h  EvaporativeCoolingTest.h  NeutralDragTest.h  NeutralHeatingTest.h  VariableAllTest.h  VariableEmissivityTest.h  VariableExpansivityTest.h  VariableHeatCapacityTest.h
Tests/UnitTests/: BackscatterTest.h  CMakeLists.txt  ChargingTimescales.h  DTOKSchargingTest.h  DTOKSchargingTest.plt  DeltaSecTest.h  DeltaThermTest.h  FlippedOMLTest.h  HPL_Currents.py  IonNeutralDragTest.h  NeutralHeatingTest.h  PlasmaFreq.plt  ReadBackscatter.m  build.sh  main.cpp  solveFlippedOML.h  unit_test.cpp
Tests/UnitTests/Charging/: ChargingTimescales.h  DTOKSchargingTest.h  DTOKSsolveOML.h  DTOKSsolveOML2.h  DTOKSsolveOML3.h  DeltaSecTest.h  LambertW.h  MOMLTest.h  OMLTest.h  SOMLTest.h  SchottkyMOMLTest.h  SchottkyOMLTest.h  solveMOML.h  solveNegSchottkyOML.h  solveOML.h  solvePosSchottkyOML.h  solveSMOML.h  solveSOML.h  solveSchottkyMOML.h  solveSchottkyOML.h  temp.m
Tests/UnitTests/Force/: FortovIonDrag.h
Tests/UnitTests/Heating/: EvaporativeCoolingTest.h  EvaporativeMassLossTest.h  NeutralHeatingTest.h
Tests/UnitTests/PlotScripts/: Backscatter.plt  DTOKScharging.plt  DTOKSwellchargingTest.plt  DeltaSec.plt  DeltaTherm.plt  FortovIonDrag.plt  HybridIonDrag.plt  MOML.plt  Maxwellian.plt  OML.plt  SOML.plt  SchottkyOML.plt  solveNegSchottkyOML.m  solvePosSchottkyOML.m  temp.m
Tests/UnitTests/include/: BIBHASTest.h  BackscatterTest.h  ChargingTimescales.h  DTOKSchargingTest.h  DTOKSsolveOML.h  DTOKSwellchargingTest.h  DeltaSecTest.h  DeltaThermTest.h  EvaporativeCoolingTest.h  EvaporativeMassLossTest.h  FortovIonDrag.h  HybridIonDrag.h  MOMLEMTest.h  MOMLTest.h  MOMLWEMTest.h  MaxwellianTest.h  NeutralDrag.h  NeutralHeatingTest.h  NeutralRecombTest.h  OMLTest.h  PHLTest.h  SMOMLTest.h  SOMLTest.h  SchottkyOMLTest.h  THSTest.h  THTest.h  solveBIBHAS.h  solveMOML.h  solveMOMLEM.h  solveMOMLWEM.h  solveNegSchottkyOML.h  solveOML.h  solvePHL.h  solvePosSchottkyOML.h  solveSMOML.h  solveSOML.h  solveTH.h  solveTHS.h
docs/: README  mainpage.md
include/: Beryllium.h  Breakup.h  ChargingModel.h  Constants.h  CurrentTerms.h  DTOKSU.h  DTOKSU_Manager.h  Deuterium.h  ForceModel.h  ForceTerms.h  Functions.h  GrainStructs.h  Graphite.h  HeatTerms.h  HeatingModel.h  Iron.h  Lithium.h  MathHeader.h  Matter.h  Model.h  Molybdenum.h  PlasmaData.h  PlasmaFluxes.h  PlasmaGrid.h  Term.h  Tungsten.h  solveMOMLEM.h  threevector.h
src/: Beryllium.cpp  Breakup.cpp  ChargingModel.cpp  Constants.cpp  CurrentTerms.cpp  DTOKSU.cpp  DTOKSU_Manager.cpp  Deuterium.cpp  ForceModel.cpp  ForceTerms.cpp  Functions.cpp  Graphite.cpp  HeatTerms.cpp  HeatingModel.cpp  Iron.cpp  Lithium.cpp  Matter.cpp  Model.cpp  Molybdenum.cpp  PlasmaFluxes.cpp  PlasmaGrid.cpp  Tungsten.cpp  solveMOMLEM.cpp  threevector.cpp
